Login and Main with drawer

--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
@@ -10,11 +10,9 @@
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_test">TestActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_user_name">Octavio Armenta</string>
+    <string name="nav_header_user_email">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 </resources>
