--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
@@ -4,8 +4,11 @@
     <string name="welcome">Welcome Back</string>
     <string name="request_email">Email address</string>
     <string name="request_password">Password</string>
+    <string name="request_user_name">Name</string>
     <string name="button_login">Sign In</string>
+    <string name="button_register">Register</string>
     <string name="request_register">Doesn\'t have an account? Register here</string>
+    <string name="button_create_account">Create account</string>
 
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
     <!-- TODO: Remove or change this placeholder text -->
