--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="button_register">Register</string>
     <string name="request_register">Doesn\'t have an account? Register here</string>
     <string name="button_create_account">Create account</string>
+    <string name="menu_item_go_to_store">Adopt a new pet</string>
 
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
     <!-- TODO: Remove or change this placeholder text -->
