--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
 
     <string name="store_title">Welcome to the store</string>
     <string name="store_subtitle">Animals available</string>
+    <string name="no_data_available">No data available</string>
 </resources>
